# itsmine

./: CMakeLists.txt  CMakePresets.json  Cargo.toml
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  main.rs  params.cpp  params.h  params.hpp
tests/: test_params.cpp
